<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:gravity="center"
    android:padding="50dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:height="100dp"
            android:layout_marginBottom="40dp"
            android:text="@string/welcomeTitle"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:src="@drawable/baseline_account_circle_24" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="32dp"
            android:hint="@string/usrPrompt"
            android:textColor="#FFFFFF"
            android:textColorHint="#BFFFFFFF"
            android:textSize="20sp"
            android:background="@drawable/rounded_corner"
            android:padding="12dp"
            android:inputType="text"
            android:id="@+id/input_username"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/pswrdPrompt"
            android:textColor="#FFFFFF"
            android:textColorHint="#BFFFFFFF"
            android:textSize="20sp"
            android:background="@drawable/rounded_corner"
            android:padding="12dp"
            android:inputType="textPassword"
            android:id="@+id/input_password"
            />

        <Button
            android:id="@+id/login_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:backgroundTint="#63FFFFFF"
            android:padding="18dp"
            android:text="@string/usrLogin"
            android:textColor="#625C97"
            android:textSize="20sp"
            app:cornerRadius="50dp"
            android:textStyle="bold"
            />

    </LinearLayout>

</RelativeLayout>