<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/success_background"
    android:gravity="center"
    android:padding="50dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="-100dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/congratsMsg"
            android:textSize="39dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/successMsg"
            android:textSize="26dp"
            android:gravity="center"
            android:padding="8dp"
            android:textColor="@color/white" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_adb_24"
            android:paddingTop="30dp" />

        <Button
            android:id="@+id/back_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:backgroundTint="#63FFFFFF"
            android:padding="12dp"
            android:text="@string/backToLog"
            android:textColor="#2770B0"
            android:textSize="20sp"
            app:cornerRadius="50dp"
            android:textStyle="bold"
            />

    </LinearLayout>

</RelativeLayout>